chore: Change tweet command to use crosspost package

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -50,7 +50,7 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             # Tweets out release announcement
-            - run: node dist/bin.js -t -b -m -l --file social-post.txt
+            - run: npx @humanwhocodes/crosspost -t -b -m -l --file social-post.txt
               if: ${{ steps.release.outputs.release_created }}
               env:
                   TWITTER_API_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
